src/test/valid/extensionTests/implicitParameters/identifiers/impIdentEqualsWithImpParam.wacc
# a simple function definition and call

# Output:
# false

# Program:

begin
  bool f(a, b) is
    bool x =  b == a;
    return x
  end
  bool b = call f(false, true);
  println b
end
